--- a/Project-4/to-do-app-redux/src/App.css
+++ b/Project-4/to-do-app-redux/src/App.css
@@ -64,3 +64,17 @@ h2 {
   background-color: lightsalmon;
   color: white;
 }
+
+@media only screen and (min-width: 426px) {
+  .container {
+    max-width: 70%;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  .container {
+    max-width: 50%;
+    margin: 0 auto;
+  }
+}
